<resources>
    <string name="app_name">My Application</string>
    <string name="fittrack">FitTrack</string>
    <string name="edit">Edit</string>
    <string name="button">Button</string>
    <string name="menu">Menu</string>
    <string name="monday_november_4th_2024">Monday, November 4th 2024</string>
    <string name="day">Day</string>
    <string name="week">Week</string>
    <string name="month">Month</string>
    <string name="menu_button">Menu Button</string>
    <string name="pagesbutton">PagesButton</string>
    <string name="imagebutton">imageButton</string>
    <string name="editbutton">editButton</string>
    <string name="stepsimage">stepsImage</string>
    <string name="march_2_march_8">March 2 - March 8</string>
</resources>