<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#1F1F1F"
    android:backgroundTint="#1F1F1F">

    <ImageButton
        android:id="@+id/PagesButton"
        android:layout_width="75dp"
        android:layout_height="75dp"
        android:layout_marginStart="2dp"
        android:layout_marginTop="2dp"
        android:background="#2C2C2C"
        android:contentDescription="@string/pagesbutton"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/pages_button" />

    <ImageButton
        android:id="@+id/editButton"
        android:layout_width="75dp"
        android:layout_height="75dp"
        android:layout_marginTop="2dp"
        android:layout_marginEnd="2dp"
        android:background="#2C2C2C"
        android:contentDescription="@string/imagebutton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/edit_button" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="196dp"
        android:layout_height="76dp"
        android:layout_marginStart="108dp"
        android:gravity="center"
        android:text="@string/fittrack"
        android:textColor="#FBDFFF"
        android:textSize="45sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/linearLayout"
        style="?android:attr/buttonBarStyle"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView">

        <Button
            android:id="@+id/button"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:backgroundTint="#2C2C2C"
            android:text="@string/day"
            android:textColor="#FBDFFF" />

        <Button
            android:id="@+id/button3"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:backgroundTint="#2C2C2C"
            android:text="@string/week"
            android:textColor="#FFCF40" />

        <Button
            android:id="@+id/button4"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:backgroundTint="#2C2C2C"
            android:text="@string/month"
            android:textColor="#FBDFFF" />
    </LinearLayout>

    <TextView
        android:id="@+id/dateBar"
        android:layout_width="0dp"
        android:layout_height="45dp"
        android:background="#2C2C2C"
        android:gravity="center"
        android:text="@string/march_2_march_8"
        android:textColor="#FBDFFF"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout" />

</androidx.constraintlayout.widget.ConstraintLayout>