<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#1F1F1F"
    android:backgroundTint="#1F1F1F">

    <ImageButton
        android:id="@+id/PagesButton"
        android:layout_width="75dp"
        android:layout_height="75dp"
        android:layout_marginStart="2dp"
        android:layout_marginTop="2dp"
        android:background="#2C2C2C"
        android:contentDescription="@string/pagesbutton"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/pages_button" />

    <TextView
        android:id="@+id/Fittrack"
        android:layout_width="196dp"
        android:layout_height="76dp"
        android:layout_marginStart="108dp"
        android:gravity="center"
        android:text="@string/fittrack"
        android:textColor="#FBDFFF"
        android:textSize="45sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/buttonBar"
        style="?android:attr/buttonBarStyle"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Fittrack">

        <Button
            android:id="@+id/Daybutton"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:backgroundTint="#2C2C2C"
            android:text="@string/day"
            android:textColor="#FFCF40" />

        <Button
            android:id="@+id/weekButton"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:backgroundTint="#2C2C2C"
            android:text="@string/week"
            android:textColor="#FBDFFF" />

        <Button
            android:id="@+id/monthButton"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:backgroundTint="#2C2C2C"
            android:text="@string/month"
            android:textColor="#FBDFFF" />
    </LinearLayout>

    <TextView
        android:id="@+id/dateBar"
        android:layout_width="0dp"
        android:layout_height="45dp"
        android:background="#2C2C2C"
        android:gravity="center"
        android:text="@string/monday_november_4th_2024"
        android:textColor="#FBDFFF"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonBar" />

    <ImageButton
        android:id="@+id/editButton"
        android:layout_width="75dp"
        android:layout_height="75dp"
        android:layout_marginTop="2dp"
        android:layout_marginEnd="2dp"
        android:background="#2C2C2C"
        android:contentDescription="@string/imagebutton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/edit_button" />

    <ImageView
        android:id="@+id/stepsImage"
        android:layout_width="80dp"
        android:layout_height="70dp"
        android:layout_marginStart="166dp"
        android:layout_marginTop="10dp"
        android:background="#1F1F1F"
        android:contentDescription="@string/editbutton"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/dateBar"
        app:srcCompat="@drawable/shoeprints" />

    <ImageView
        android:id="@+id/distImage"
        android:layout_width="80dp"
        android:layout_height="70dp"
        android:layout_marginStart="166dp"
        android:layout_marginTop="10dp"
        android:background="#1F1F1F"
        android:contentDescription="@string/stepsimage"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/StepsBar"
        app:srcCompat="@drawable/running" />

    <ProgressBar
        android:id="@+id/StepsBar"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="300dp"
        android:layout_height="20dp"
        android:layout_marginStart="56dp"
        android:layout_marginTop="10dp"
        android:max="100"
        android:progress="0"
        android:progressTint="#3CCA72"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/stepsText" />

    <ProgressBar
        android:id="@+id/distBar"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="300dp"
        android:layout_height="20dp"
        android:layout_marginStart="56dp"
        android:layout_marginTop="10dp"
        android:max="100"
        android:progress="0"
        android:progressTint="#EA4B4C"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/milesText" />

    <ProgressBar
        android:id="@+id/calBar"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="300dp"
        android:layout_height="20dp"
        android:layout_marginStart="56dp"
        android:layout_marginTop="10dp"
        android:max="100"
        android:progress="0"
        android:progressTint="#EA4B4C"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/calText" />

    <TextView
        android:id="@+id/mileNum"
        android:layout_width="wrap_content"
        android:layout_height="25dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="10dp"
        android:gravity="center"
        android:text="1.15"
        android:textColor="#EA4B4C"
        app:layout_constraintEnd_toStartOf="@+id/milesText"
        app:layout_constraintTop_toBottomOf="@+id/distImage" />

    <TextView
        android:id="@+id/stepsNum"
        android:layout_width="wrap_content"
        android:layout_height="25dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="10dp"
        android:gravity="center"
        android:text="2,500"
        android:textColor="#3CCA72"
        app:layout_constraintEnd_toStartOf="@+id/stepsText"
        app:layout_constraintTop_toBottomOf="@+id/stepsImage" />

    <TextView
        android:id="@+id/stepsText"
        android:layout_width="wrap_content"
        android:layout_height="25dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="175dp"
        android:gravity="center"
        android:text="Steps"
        android:textColor="#F9DEFD"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/stepsImage" />

    <TextView
        android:id="@+id/milesText"
        android:layout_width="wrap_content"
        android:layout_height="25dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="175dp"
        android:gravity="center"
        android:text="Miles"
        android:textColor="#F9DEFD"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/distImage" />

    <ImageView
        android:id="@+id/calImage"
        android:layout_width="80dp"
        android:layout_height="70dp"
        android:layout_marginStart="168dp"
        android:layout_marginTop="10dp"
        android:background="#1F1F1F"
        android:contentDescription="calImage"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/distBar"
        app:srcCompat="@drawable/flame_1" />

    <TextView
        android:id="@+id/calText"
        android:layout_width="wrap_content"
        android:layout_height="25dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="175dp"
        android:gravity="center"
        android:text="kCals"
        android:textColor="#F9DEFD"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/calImage" />

    <TextView
        android:id="@+id/calNum"
        android:layout_width="wrap_content"
        android:layout_height="25dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="10dp"
        android:gravity="center"
        android:text="5,024"
        android:textColor="#E99707"
        app:layout_constraintEnd_toStartOf="@+id/calText"
        app:layout_constraintTop_toBottomOf="@+id/calImage" />

</androidx.constraintlayout.widget.ConstraintLayout>