<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#1F1F1F"
    android:backgroundTint="#1F1F1F">

    <Button
        android:id="@+id/menuButton"
        android:layout_width="75dp"
        android:layout_height="75dp"
        android:backgroundTint="#2C2C2C"
        android:textColor="#FBDFFF"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/editButton"
        android:layout_width="75dp"
        android:layout_height="75dp"
        android:backgroundTint="#2C2C2C"
        android:text="@string/edit"
        android:textColor="#FBDFFF"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="196dp"
        android:layout_height="76dp"
        android:layout_marginStart="108dp"
        android:layout_marginEnd="35dp"
        android:gravity="center"
        android:text="@string/fittrack"
        android:textColor="#FBDFFF"
        android:textSize="45sp"
        app:layout_constraintEnd_toStartOf="@+id/button2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:layout_width="409dp"
        android:layout_height="60dp"
        android:orientation="horizontal"
        tools:layout_editor_absoluteX="1dp"
        tools:layout_editor_absoluteY="76dp">

        <Button
            android:id="@+id/button"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:backgroundTint="#2C2C2C"
            android:text="Day"
            android:textColor="#FBDFFF" />

        <Button
            android:id="@+id/button3"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:backgroundTint="#2C2C2C"
            android:text="Week"
            android:textColor="#FBDFFF" />

        <Button
            android:id="@+id/button4"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:backgroundTint="#2C2C2C"
            android:text="Month"
            android:textColor="#FBDFFF" />
    </LinearLayout>

    <TextView
        android:id="@+id/textView2"
        android:layout_width="0dp"
        android:layout_height="45dp"
        android:background="#2C2C2C"
        android:gravity="center"
        android:text="@string/monday_november_4th_2024"
        android:textColor="#FBDFFF"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="136dp" />

</androidx.constraintlayout.widget.ConstraintLayout>